force-app/main/default/objects/Push_Notification_Item__c/Push_Notification_Item__c.object-meta.xml
<CustomObject>
    <label>Push Notification Item</label>
    <nameField>
        <displayFormat>PNI-{0000000000}</displayFormat>
        <label>Push Notification Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Notification Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>