force-app/main/default/objects/Push_Notification_Item__c/fields/Is_Silent_Push__c.field-meta.xml
<CustomField>
    <fullName>Is_Silent_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Silent Push</label>
    <type>Checkbox</type>
</CustomField>