force-app/main/default/objects/Push_Notification_Item__c/fields/isRead__c.field-meta.xml
<CustomField>
    <fullName>isRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRead</label>
    <type>Checkbox</type>
</CustomField>