force-app/main/default/objects/Push_Notification_Item__c/fields/Last_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Send_Date__c</fullName>
    <label>Last Send Date</label>
    <type>DateTime</type>
</CustomField>