force-app/main/default/objects/Push_Notification_Item__c/fields/Need_To_Be_Send__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Be_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need To Be Send</label>
    <type>Checkbox</type>
</CustomField>