force-app/main/default/objects/Push_Notification_Item__c/fields/Parent_Push__c.field-meta.xml
<CustomField>
    <fullName>Parent_Push__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Push</label>
    <referenceTo>Push_Notification_Item__c</referenceTo>
    <relationshipLabel>Push Notification Items</relationshipLabel>
    <relationshipName>Push_Notification_Items</relationshipName>
    <type>Lookup</type>
</CustomField>