force-app/main/default/objects/Push_Notification_Item__c/fields/SoundAlert__c.field-meta.xml
<CustomField>
    <fullName>SoundAlert__c</fullName>
    <label>SoundAlert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>