force-app/main/default/objects/Push_Notification_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>ClientList</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>ExceptionalProduct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>FirmOrder</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>CareService</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Wardrobing</fullName>
            </value>
            <value>
                <fullName>Variation_Member</fullName>
            </value>
            <value>
                <fullName>Experience_Variation</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
                <isActive>false</isActive>
                <label>Case</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <isActive>false</isActive>
                <label>Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>