force-app/main/default/objects/Push_Notification_Item__c/fields/UserRecipient__c.field-meta.xml
<CustomField>
    <fullName>UserRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserRecipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Push_Notification_Items</relationshipName>
    <type>Lookup</type>
</CustomField>