force-app/main/default/objects/Push_Notification_Item__c/fields/UsersIds__c.field-meta.xml
<CustomField>
    <fullName>UsersIds__c</fullName>
    <label>UsersIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>