force-app/main/default/objects/Push_Notification_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>UsersIds__c</columns>
    <columns>Last_Send_Date__c</columns>
    <columns>Need_To_Be_Send__c</columns>
    <columns>Parent_Push__c</columns>
    <columns>PushObject_JSon__c</columns>
    <columns>Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/27/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>